Corrected my name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </li>
 <li>Atro Lähdemäki <a href="https://github.com/eurybus" class="user-mention">@eurybus</a>
 </li>
-<li>Teemu Tuominen <a href="https://github.com/teemutt" class="user-mention">@teemutt</a>
+<li>Teemu Tuomela <a href="https://github.com/teemutt" class="user-mention">@teemutt</a>
 </li>
 <li>Ruben Laube-Pohto <a href="https://github.com/rubenlaube-pohto" class="user-mention">@rubenlaube-pohto</a>
 </li>
