--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 <a id="vigiar-projektin-ryhmä" class="anchor" href="#vigiar-projektin-ryhm%C3%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vigiar-projektin ryhmä</h2>
 
 <ul>
-<li>Joonas Pylvinen <a href="https://github.com/jpylvi87" class="user-mention">@jpylvi87</a>
+<li>Joonas Pylvinen (<a href="https://github.com/jpylvi87" class="user-mention">@jpylvi87</a>)
 </li>
-<li>Atro Lähdemäki <a href="https://github.com/eurybus" class="user-mention">@eurybus</a>
+<li>Atro Lähdemäki (<a href="https://github.com/eurybus" class="user-mention">@eurybus</a>)
 </li>
-<li>Teemu Tuomela <a href="https://github.com/teemutt" class="user-mention">@teemutt</a>
+<li>Teemu Tuomela (<a href="https://github.com/teemutt" class="user-mention">@teemutt</a>)
 </li>
-<li>Ruben Laube-Pohto <a href="https://github.com/rubenlaube-pohto" class="user-mention">@rubenlaube-pohto</a>
+<li>Ruben Laube-Pohto (<a href="https://github.com/rubenlaube-pohto" class="user-mention">@rubenlaube-pohto</a>)
 </li>
-<li>Valtteri Mäntylä-Blå</li>
+<li>Valtteri Mäntylä-Blå (@?)
+</li>
 </ul>
       </section>
       <footer>
