--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <li>Valtteri Mäntylä-Blå (@?)
 </li>
 </ul>
+<a href="https://github.com/Ukubona/ukubona.github.io/wiki/tiimin-statusraportti">Project Status</a>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
