--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/Ukubona">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/Ukubona">View Team GitHub Profile</a></p>
 
       </header>
       <section>
